--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "pnpm seed:ifneeded && next dev",
+    "seed": "pnpm exec tsx prisma/seed.ts",
+    "seed:ifneeded": "node scripts/seed-if-needed.js",
+    "db:reset": "rm -f prisma/dev.db && pnpm migrate && pnpm seed",
+    "db:seed": "pnpm seed",
+    "migrate": "npx prisma migrate dev --name reset",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -23,6 +28,7 @@
     "prisma": "^6.12.0",
     "sqlite": "^5.1.1",
     "tailwindcss": "^4",
+    "tsx": "^4.20.3",    
     "typescript": "^5"
   }
 }
