--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "date-fns": "^4.1.0",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
