--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "pnpm seed:ifneeded && next dev",
-    "seed": "pnpm exec tsx prisma/seed.ts",
+    "seed": "pnpm exec tsx scripts/seed.ts",
     "seed:ifneeded": "node scripts/seed-if-needed.js",
     "db:reset": "rm -f prisma/dev.db && pnpm migrate && pnpm seed",
     "db:seed": "pnpm seed",
     "migrate": "npx prisma migrate dev --name reset",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
